--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@
             </a>
 
 
-            <a href="https://whatsapp.com/channel/0029Vb50R3rHltY0fII7w20H" target="_blank" class="card" id="whatsappBtn">
+            <a href="#" onclick="joinWhatsApp()" class="card" id="whatsappBtn">
                 <h3>💬 Join WhatsApp</h3>
                 <p>Connect with our learning community.</p>
             </a>
+            
+            <script>
+            function joinWhatsApp() {
+                window.location.href = "https://whatsapp.com/channel/0029Vb50R3rHltY0fII7w20H";
+            }
+            </script>
             
             <a href="https://studio.d-id.com/agents/share?id=agt_hnTntEkx&utm_source=copy&key=WjI5dloyeGxMVzloZFhSb01ud3hNVGd3TmpJeE5qVXdNVGt4TWpVME1qVTFPVEU2YkdweVlVaFBWa3N4VDNaUE0xQlRORVJUWW14Zg==" 
    target="_blank" 
