--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </a>
 
 
-            <a href="https://wa.me/0029Vb50R3rHltY0fII7w20H" target="_blank" class="card" id="whatsappBtn">
+            <a> href="https://wa.me/0029Vb50R3rHltY0fII7w20H" target="_blank" class="card" id="whatsappBtn">
     <h3>💬 Join WhatsApp</h3>
     <p>Connect with our learning community.</p>
 </a>
