--- a/mcq.html
+++ b/mcq.html
@@ -17,7 +17,7 @@
         <!-- Subject Selection -->
         <section id="subject-selection">
             <h2>Select a Subject</h2>
-            <button onclick="startTest('math')">Mathematics</button>
+            <button onclick="startTest('math')">Accounts</button>
             <button onclick="startTest('science')">Science</button>
             <button onclick="startTest('history')">History</button>
         </section>
