--- a/mcq.html
+++ b/mcq.html
@@ -16,10 +16,10 @@
     <main>
         <!-- Subject Selection -->
         <section id="subject-selection">
-            <h2>Select a Subject</h2>
-            <button onclick="startTest('math')">Accounts</button>
-            <button onclick="startTest('science')">Science</button>
-            <button onclick="startTest('history')">History</button>
+            <h2>SELECT A SUBJECT</h2>
+            <button onclick="startTest('Corporate Accounts')">Corporate Accounts</button>
+            <button onclick="startTest('Marketing Management')">Marketing Management</button>
+            <button onclick="startTest('ESBM')">ESBM</button>
         </section>
 
         <!-- MCQ Test Section (Initially Hidden) -->
