--- a/mcq.html
+++ b/mcq.html
@@ -17,7 +17,7 @@
         <!-- Subject Selection -->
         <section id="subject-selection">
             <h2>SELECT A SUBJECT</h2>
-            <button onclick="startTest('Corporate Accounts')">Corporate Accounts</button>
+            <button onclick="startTest('Cost Accounting')">Cost Accounting</button>
             <button onclick="startTest('Marketing Management')">Marketing Management</button>
             <button onclick="startTest('ESBM')">ESBM</button>
             <button onclick="startTest('Income Tax')">Income Tax</button>
