--- a/mcq.html
+++ b/mcq.html
@@ -18,7 +18,7 @@
       <button onclick="startTest('Cost Accounting')">Cost Accounting</button>
       <button onclick="startTest('Marketing Management')">Marketing Management</button>
       <button onclick="startTest('ESBM')">ESBM</button>
-      <button onclick="startTest('Income Tax')">Income Tax</button
+      <button onclick="startTest('Income Tax')">Income Tax</button>
       <button onclick="startTest('Banking')">Banking</button>
       <button onclick="startTest('Fundamentals of Macro Economics')">Fundamentals of Macro Economics</button>
     </section>
