--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <a href="pdf.html" class="card" id="pdfBtn">
                 <h3>📚 PDFs & Notes</h3>
-                <p>Download study materials & Important Question.</p>
+                <p>Download study materials & IMP.</p>
             </a>
 
             <a href="mcq.html" class="card" id="mcqBtn">
