--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <a href="mcq.html" class="card" id="mcqBtn">
                 <h3>📝 MCQ Practice</h3>
-                <p>Take practice & final tests.</p>
+                <p>MCQ Practise test with Answers.</p>
             </a>
 
 
