--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <a href="#" onclick="checkWhatsApp()" class="card" id="whatsappBtn">
                <h3>💬 Join WhatsApp</h3>
-               <p>Connect with our learning community.</p>
+               <p>Connect with our learning channel.</p>
             </a>
 
             <script>
