--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="buttons">
             <a href="#" class="card" id="videoBtn">
                 <h3>🎥 Video Library</h3>
-                <p>Browse and watch educational videos.</p>
+                <p>videos lectures coming soon.</p>
             </a>
 
             <a href="pdf.html" class="card" id="pdfBtn">
