--- a/pdf.html
+++ b/pdf.html
@@ -22,10 +22,10 @@
     </div>
 
     <div class="pdf-section">
-        <h2>📝 MCQ PDFs</h2>
+        <h2>📝 Important Question</h2>
         <ul>
-            <li><a href="pdfs/mcq/mcq1.pdf" target="_blank">MCQ Test 1</a></li>
-            <li><a href="pdfs/mcq/mcq2.pdf" target="_blank">MCQ Test 2</a></li>
+            <li><a href="pdfs/mcq/mcq1.pdf" target="_blank">Cost Accounting</a></li>
+            <li><a href="pdfs/mcq/mcq2.pdf" target="_blank">Marketing Management</a></li>
         </ul>
     </div>
 
