--- a/pdf.html
+++ b/pdf.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="pdf-section">
-        <h2>📝 Important Question</h2>
+        <h2>📝 Important Questions</h2>
         <ul>
             <li><a href="pdfs/mcq/mcq1.pdf" target="_blank">Cost Accounting</a></li>
             <li><a href="pdfs/mcq/mcq2.pdf" target="_blank">Marketing Management</a></li>
