--- a/pdf.html
+++ b/pdf.html
@@ -24,8 +24,7 @@
     <div class="pdf-section">
         <h2>📝 Important Questions</h2>
         <ul>
-            <li><a href="pdfs/mcq/mcq1.pdf" target="_blank">Cost Accounting</a></li>
-            <li><a href="pdfs/mcq/mcq2.pdf" target="_blank">Marketing Management</a></li>
+            <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
         </ul>
     </div>
 
