--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <img src="assets/logo.jpg" alt="MentorsPoint Logo" class="logo">
             <h1>MentorsPoint</h1>
         </div>
+        <nav>
+            <a href="login.html" class="btn">Login</a>
+            <a href="signup.html" class="btn">Sign Up</a>
+        </nav>
     </header>
     
 
@@ -27,34 +31,24 @@
         <section class="buttons">
             <a href="#" class="card" id="videoBtn">
                 <h3>🎥 Video Library</h3>
-                <p>videos lectures coming soon here.</p>
+                <p>Browse and watch educational videos.</p>
             </a>
 
             <a href="pdf.html" class="card" id="pdfBtn">
                 <h3>📚 PDFs & Notes</h3>
-                <p>Download study materials & IMP.</p>
+                <p>Download study materials & MCQs.</p>
             </a>
 
             <a href="mcq.html" class="card" id="mcqBtn">
                 <h3>📝 MCQ Practice</h3>
-                <p>MCQ Practise test with Answers.</p>
+                <p>Take practice & final tests.</p>
             </a>
 
 
-            <a href="#" onclick="checkWhatsApp()" class="card" id="whatsappBtn">
-               <h3>💬 Join WhatsApp</h3>
-               <p>Connect with our learning channel.</p>
+            <a href="https://whatsapp.com/channel/0029Vb50R3rHltY0fII7w20H" target="_blank" class="card" id="whatsappBtn">
+                <h3>💬 Join WhatsApp</h3>
+                <p>Connect with our learning community.</p>
             </a>
-
-            <script>
-            function checkWhatsApp() {
-                let whatsappChannelLink = "https://whatsapp.com/channel/0029Vb50R3rHltY0fII7w20H";
-
-                // Open in a new tab
-                window.open(whatsappChannelLink, "_blank");
-             }
-             </script>
-
             
             <a href="https://studio.d-id.com/agents/share?id=agt_hnTntEkx&utm_source=copy&key=WjI5dloyeGxMVzloZFhSb01ud3hNVGd3TmpJeE5qVXdNVGt4TWpVME1qVTFPVEU2YkdweVlVaFBWa3N4VDNaUE0xQlRORVJUWW14Zg==" 
    target="_blank" 
