--- a/pdf.html
+++ b/pdf.html
@@ -13,18 +13,19 @@
     <div class="pdf-section">
         <h2>📄 Study Material (S.Y. B.com)</h2>
         <ul>
-            <li><a href="https://drive.google.com/file/d/174DbXuLqjv4T6qN_02L4x_8Yidq3Ip6v/view?usp=drive_link" target="_blank">Cost Accounting unit 1 ch 1</a></li>
-            <li><a href="https://drive.google.com/file/d/1CKchbkqdC9QX6uHqCLvbAZp4yftj_Fh4/view?usp=sharing" target="_blank">Cost Accounting unit 1 ch 2</a></li>
-            <li><a href="https://drive.google.com/file/d/1Nhf6bwAOYP8-nGrFB6dmN6jDNMjt2Bgl/view?usp=sharing" target="_blank">ESBM unit 1 & 2</a></li>
-            <li><a href="https://drive.google.com/file/d/13zPVpD99PeLUv524cd_tKFgYwcR1JnGM/view?usp=sharing" target="_blank">Macro economics unit 1</a></li>
-            <li><a href="https://drive.google.com/file/d/1nv17jqcSY7sspnoWlsNmj1HxAQmK7Zep/view?usp=sharing" target="_blank">Marketing management unit 1 & 2</a></li>
+            <li><a href="pdfs/study material/study1.pdf" target="_blank">Corporate Accounts unit 1 ch 2</a></li>
+            <li><a href="pdfs/study material/DocScanner Jan 9, 2025 11-43 AM.pdf" target="_blank">Corporate Accounts unit 1 ch 2</a></li>
+            <li><a href="pdfs/study material/EBSM 1.pdf" target="_blank">ESBM unit 1 & 2</a></li>
+            <li><a href="pdfs/study material/macro economics unit 1.pdf" target="_blank">Macro economics unit 1</a></li>
+            <li><a href="pdfs/study material/marketin management unit 1 (2).pdf" target="_blank">Marketin management unit 1 & 2</a></li>
         </ul>
     </div>
 
     <div class="pdf-section">
-        <h2>📝 Important Questions</h2>
+        <h2>📝 MCQ PDFs</h2>
         <ul>
-            <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
+            <li><a href="pdfs/mcq/mcq1.pdf" target="_blank">MCQ Test 1</a></li>
+            <li><a href="pdfs/mcq/mcq2.pdf" target="_blank">MCQ Test 2</a></li>
         </ul>
     </div>
 
