--- a/pdf.html
+++ b/pdf.html
@@ -15,6 +15,8 @@
         <ul>
             <li><a href="https://drive.google.com/file/d/174DbXuLqjv4T6qN_02L4x_8Yidq3Ip6v/view?usp=drive_link" target="_blank">Cost Accounting unit 1 ch 1</a></li>
             <li><a href="https://drive.google.com/file/d/1CKchbkqdC9QX6uHqCLvbAZp4yftj_Fh4/view?usp=sharing" target="_blank">Cost Accounting unit 1 ch 2</a></li>
+            <li><a href="https://drive.google.com/file/d/1KYE7xMPElLSV8c8HMrnqzh5JZrrLKeQB/view?usp=sharing" target="_blank">Cost Accounting unit 2 Labour cost</a></li>
+            <li><a href="https://drive.google.com/file/d/11e40Kew_fkGX14muqv7MHoyuqRBX4yoi/view?usp=sharing" target="_blank">Cost Accounting Unit 2 Overheads</a></li>
             <li><a href="https://drive.google.com/file/d/1Nhf6bwAOYP8-nGrFB6dmN6jDNMjt2Bgl/view?usp=sharing" target="_blank">ESBM unit 1 & 2</a></li>
             <li><a href="https://drive.google.com/file/d/13zPVpD99PeLUv524cd_tKFgYwcR1JnGM/view?usp=sharing" target="_blank">Macro economics unit 1</a></li>
             <li><a href="https://drive.google.com/file/d/1nv17jqcSY7sspnoWlsNmj1HxAQmK7Zep/view?usp=sharing" target="_blank">Marketing management unit 1 & 2</a></li>
