--- a/pdf.html
+++ b/pdf.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="pdf-section">
-        <h2>📝 Important Questions</h2>
+        <h2>📝 Important Questions (S.Y Bcom)</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
         </ul>
