--- a/pdf.html
+++ b/pdf.html
@@ -21,6 +21,7 @@
             <li><a href="https://drive.google.com/file/d/1Nhf6bwAOYP8-nGrFB6dmN6jDNMjt2Bgl/view?usp=sharing" target="_blank">ESBM unit 1 & 2</a></li>
             <li><a href="https://drive.google.com/file/d/10ssHp2VR-iBbMWUtQEe80ijJMKFuoqH_/view?usp=sharing" target="_blank">Macro economics unit 1 & 2</a></li>
             <li><a href="https://drive.google.com/file/d/1nv17jqcSY7sspnoWlsNmj1HxAQmK7Zep/view?usp=sharing" target="_blank">Marketing management unit 1 & 2</a></li>
+            <li><a href="https://drive.google.com/file/d/1rX-EBDYo6y8R8KCwNSJgm0BUUFGYpE1E/view?usp=sharing" target="_blank">Banking unit 1</a></li>
         </ul>
     </div>
 
