--- a/pdf.html
+++ b/pdf.html
@@ -29,6 +29,7 @@
         <h2>📝 Important Questions (S.Y Bcom)</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
+            <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Cost Accounting Q&A</a></li>
         </ul>
     </div>
 
