--- a/pdf.html
+++ b/pdf.html
@@ -26,10 +26,11 @@
     </div>
 
     <div class="pdf-section">
-        <h2>📝 Important Questions (S.Y Bcom)</h2>
+        <h2>📝 Important Questions With Answers(S.Y Bcom)</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
             <li><a href="https://drive.google.com/file/d/1JcXelBQSBOFiWyVicQBt263PkaTLUGfl/view?usp=sharing" target="_blank">Cost Accounting Q&A</a></li>
+            <li><a href="https://drive.google.com/file/d/1IaltyGV5uWpw0s-Clv2czxzKv15uAHka/view?usp=sharing" target="_blank">ESBM Q&A</a></li>
         </ul>
     </div>
 
