--- a/pdf.html
+++ b/pdf.html
@@ -31,7 +31,7 @@
             <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
             <li><a href="https://drive.google.com/file/d/1JcXelBQSBOFiWyVicQBt263PkaTLUGfl/view?usp=sharing" target="_blank">Cost Accounting Q&A</a></li>
             <li><a href="https://drive.google.com/file/d/1IaltyGV5uWpw0s-Clv2czxzKv15uAHka/view?usp=sharing" target="_blank">ESBM Q&A</a></li>
-            <li><a href="https://drive.google.com/file/d/1LOpIe8_GnbQuQNR2YTgd4KFwDIGp9T9q/view?usp=drive_link" target="_blank">Banking</a></li>
+            <li><a href="https://drive.google.com/file/d/1LOpIe8_GnbQuQNR2YTgd4KFwDIGp9T9q/view?usp=drive_link" target="_blank">Money & Banking</a></li>
         </ul>
     </div>
 
