--- a/pdf.html
+++ b/pdf.html
@@ -34,6 +34,13 @@
             <li><a href="https://drive.google.com/file/d/1LOpIe8_GnbQuQNR2YTgd4KFwDIGp9T9q/view?usp=drive_link" target="_blank">Money & Banking</a></li>
         </ul>
     </div>
+    
+    <div class="pdf-section">
+        <h2>📝 MCQ's PDF(S.Y Bcom)</h2>
+        <ul>
+            <li><a href="https://drive.google.com/file/d/1YxJJUByaqDvWcZA6lLc4kKhaPe3pfEJJ/view?usp=sharing" target="_blank">Marketing Management MCQ's</a></li>
+        </ul>
+    </div>
 
     <a href="index.html" class="btn">⬅️ Back to Home</a>
 
