--- a/pdf.html
+++ b/pdf.html
@@ -39,6 +39,7 @@
         <h2>📝 MCQ's PDF(S.Y Bcom)</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1YxJJUByaqDvWcZA6lLc4kKhaPe3pfEJJ/view?usp=sharing" target="_blank">Marketing Management MCQ's</a></li>
+            <li><a href="https://drive.google.com/file/d/1_kBVuwQVcdXftYeBTgzQYxZgxNDXj3fs/view?usp=sharing" target="_blank">Income Tax Return MCQ's</a></li>
         </ul>
     </div>
 
