--- a/pdf.html
+++ b/pdf.html
@@ -36,10 +36,11 @@
     </div>
     
     <div class="pdf-section">
-        <h2>📝 MCQ's PDF(S.Y Bcom)</h2>
+        <h2>📝 MCQ's PDF with Answer(S.Y Bcom)</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1YxJJUByaqDvWcZA6lLc4kKhaPe3pfEJJ/view?usp=sharing" target="_blank">Marketing Management MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1_kBVuwQVcdXftYeBTgzQYxZgxNDXj3fs/view?usp=sharing" target="_blank">Income Tax Return MCQ's</a></li>
+            <li><a href="https://drive.google.com/file/d/1gYx-3b54kYy4-BT2GsKHb8uZ-sMvVVjX/view?usp=sharing" target="_blank">Computerized Accounting MCQ's</a></li>
         </ul>
     </div>
 
