--- a/pdf.html
+++ b/pdf.html
@@ -41,6 +41,7 @@
             <li><a href="https://drive.google.com/file/d/1YxJJUByaqDvWcZA6lLc4kKhaPe3pfEJJ/view?usp=sharing" target="_blank">Marketing Management MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1_kBVuwQVcdXftYeBTgzQYxZgxNDXj3fs/view?usp=sharing" target="_blank">Income Tax Return MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1gYx-3b54kYy4-BT2GsKHb8uZ-sMvVVjX/view?usp=sharing" target="_blank">Computerized Accounting MCQ's</a></li>
+            <li><a href="https://drive.google.com/file/d/1PNiAcRgIum0BfWEbvZ9XuI_3McM0p0T5/view?usp=sharing" target="_blank">Critical Thinking MCQ's</a></li>
         </ul>
     </div>
 
