--- a/pdf.html
+++ b/pdf.html
@@ -42,6 +42,7 @@
             <li><a href="https://drive.google.com/file/d/1_kBVuwQVcdXftYeBTgzQYxZgxNDXj3fs/view?usp=sharing" target="_blank">Income Tax Return MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1gYx-3b54kYy4-BT2GsKHb8uZ-sMvVVjX/view?usp=sharing" target="_blank">Computerized Accounting MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1CaOKkJ-Oj1EKnuMQYFIAmQsPKGupDV9a/view?usp=sharing" target="_blank">Critical Thinking MCQ's</a></li>
+            <li><a href="https://drive.google.com/file/d/1CaOKkJ-Oj1EKnuMQYFIAmQsPKGupDV9a/view?usp=sharing" target="_blank">INNOVATION IN RURAL ENTERPRENEURSHIP MCQ's</a></li>
         </ul>
     </div>
 
