--- a/pdf.html
+++ b/pdf.html
@@ -44,6 +44,7 @@
             <li><a href="https://drive.google.com/file/d/1CaOKkJ-Oj1EKnuMQYFIAmQsPKGupDV9a/view?usp=sharing" target="_blank">Critical Thinking MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1Rv6X2sOZHS6KZ24hprM_r93JB0Ni330X/view?usp=sharing" target="_blank">INNOVATION IN RURAL ENTERPRENEURSHIP MCQ's</a></li>
             <li><a href="https://drive.google.com/file/d/1yy2EAtDpPjieVWVfyechJXhBbejAxRj_/view?usp=sharing" target="_blank">Banking Literacy MCQ's</a></li>
+            <li><a href="https://drive.google.com/file/d/1TlMb9WgjQUPUJ7HiLOqHM-Y9lcPSrESe/view?usp=sharing" target="_blank">ENGLISH FOR DIGITAL AND VIRTUAL COMMUNICATION MCQ's</a></li>
         </ul>
     </div>
 
