--- a/login.html
+++ b/login.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - MentorsPoint</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Animated Login</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
-    <div class="auth-container">
-        <h2>Login to MentorsPoint</h2>
-        <input type="text" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button class="btn">Login</button>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <div class="container">
+        <form class="login-form">
+            <h2>Login</h2>
+            <div class="input-box">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+            <div class="input-box">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            <p class="register-link">Don't have an account? <a href="#">Sign up</a></p>
+        </form>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
