--- a/signup.html
+++ b/signup.html
@@ -3,19 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - MentorsPoint</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Sign-Up Page</title>
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
 
-    <div class="auth-container">
-        <h2>Create an Account</h2>
-        <input type="text" placeholder="Full Name" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button class="btn">Sign Up</button>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+    <div class="container">
+        <form class="signup-form">
+            <h2>Sign Up</h2>
+
+            <div class="input-box">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+
+            <div class="input-box">
+                <input type="email" required>
+                <label>Email</label>
+            </div>
+
+            <div class="input-box">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+
+            <div class="input-box">
+                <input type="password" required>
+                <label>Confirm Password</label>
+            </div>
+
+            <button type="submit" class="btn">Sign Up</button>
+
+            <div class="register-link">
+                Already have an account? <a href="login.html">Login</a>
+            </div>
+        </form>
     </div>
 
+    <script src="signup.js"></script>
 </body>
 </html>
