--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
 
         <section class="buttons">
-            <a href="#" class="card" id="videoBtn">
+            <a href="video.html" class="card" id="videoBtn">
                 <h3>🎥 Video Library</h3>
                 <p>Videos lectures coming soon here.</p>
             </a>
@@ -50,17 +50,6 @@
                <h3>💬 Join WhatsApp</h3>
                <p>Connect with our learning channel.</p>
             </a>
-<<<<<<< Updated upstream
-            
-            <a href="https://studio.d-id.com/agents/share?id=agt_F8gG9CEb&utm_source=copy&key=WVhWMGFEQjhOamRqTlRobE9UUm1aRGRrTUdRellXTm1Oamc1WWpCbU9rY3hXbUprTmt0b2FEWjRkMnhtY1d0ZlkyaElSdz09" 
-   target="_blank" 
-   class="card" 
-   id="chatbotBtn">
-    <h3>🤖 Chatbot</h3>
-    <p>Get instant answers to your queries.</p>
-</a>
-=======
->>>>>>> Stashed changes
 
             <script>
             function checkWhatsApp() {
