--- a/mcq.html
+++ b/mcq.html
@@ -15,21 +15,40 @@
     <!-- Subject Selection -->
     <section id="subject-selection">
       <h2>SELECT A SUBJECT</h2>
-      <button onclick="startTest('Cost Accounting')">Cost Accounting</button>
-      <button onclick="startTest('Marketing Management')">Marketing Management</button>
-      <button onclick="startTest('ESBM')">ESBM</button>
-      <button onclick="startTest('Income Tax')">Income Tax</button>
-      <button onclick="startTest('Banking')">Banking</button>
-      <button onclick="startTest('Fundamentals of Macro Economics')">Fundamentals of Macro Economics</button>
+      <div class="subject-grid">
+        <button onclick="startTest('Cost Accounting')">Cost Accounting</button>
+        <button onclick="startTest('Marketing Management')">Marketing Management</button>
+        <button onclick="startTest('ESBM')">ESBM</button>
+        <button onclick="startTest('Income Tax')">Income Tax</button>
+        <button onclick="startTest('Banking')">Banking</button>
+        <button onclick="startTest('Fundamentals of Macro Economics')">Macro Economics</button>
+      </div>
     </section>
+
     <!-- MCQ Test Section (Initially Hidden) -->
-    <section id="mcq-test" style="display: none;">
-      <h2 id="subject-title"></h2>
-      <p id="question"></p>
-      <div id="options"></div>
-      <button id="next-btn" onclick="nextQuestion()" style="display: none;">Next</button>
-      <p id="explanation"></p>
-    </section>
+<section id="mcq-test" style="display: none;">
+  
+  <!-- Title -->
+  <h2 id="subject-title"></h2>
+
+  <!-- Question Counter -->
+  <p id="question-counter">Question 1 of 25</p>
+
+  <!-- MCQ Card -->
+  <div class="mcq-card">
+    <p id="question"></p>
+    <div id="options"></div>
+  </div>
+
+  <!-- Buttons -->
+  <div class="mcq-buttons">
+    <button id="next-btn" onclick="nextQuestion()" style="display: none;">Next</button>
+  </div>
+
+  <!-- Explanation -->
+  <p id="explanation"></p>
+
+</section>
   </main>
 </body>
 </html>
