--- a/pdf.html
+++ b/pdf.html
@@ -3,59 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF & Notes - MentorsPoint</title>
+    <title>Study Material - S.Y. B.Com</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="pdf-page">
 
-    <h1>📚 PDF & Notes</h1>
-
-    <div class="pdf-section">
-        <h2>📄 Study Material (S.Y. B.Com)</h2>
-        <ul>
-            <li><a href="pdfs/study material/study1.pdf" target="_blank">Corporate Accounts Unit 1 Ch 2</a></li>
-            <li><a href="pdfs/study material/DocScanner Jan 9, 2025 11-43 AM.pdf" target="_blank">Corporate Accounts Unit 1 Ch 2</a></li>
-            <li><a href="pdfs/study material/EBSM 1.pdf" target="_blank">ESBM Unit 1 & 2</a></li>
-            <li><a href="pdfs/study material/macro economics unit 1.pdf" target="_blank">Macro Economics Unit 1</a></li>
-            <li><a href="pdfs/study material/marketin management unit 1 (2).pdf" target="_blank">Marketing Management Unit 1 & 2</a></li>
-            <li><a href="https://drive.google.com/file/d/174DbXuLqjv4T6qN_02L4x_8Yidq3Ip6v/view?usp=drive_link" target="_blank">Cost Accounting Unit 1 Ch 1</a></li>
-            <li><a href="https://drive.google.com/file/d/1CKchbkqdC9QX6uHqCLvbAZp4yftj_Fh4/view?usp=sharing" target="_blank">Cost Accounting Unit 1 Ch 2</a></li>
-            <li><a href="https://drive.google.com/file/d/1KYE7xMPElLSV8c8HMrnqzh5JZrrLKeQB/view?usp=sharing" target="_blank">Cost Accounting Unit 2 Labour Cost</a></li>
-            <li><a href="https://drive.google.com/file/d/11e40Kew_fkGX14muqv7MHoyuqRBX4yoi/view?usp=sharing" target="_blank">Cost Accounting Unit 2 Overheads</a></li>
-            <li><a href="https://drive.google.com/file/d/1zR-mEso5giWOEtUFaVqjMEwnuc9q0oZE/view?usp=sharing" target="_blank">Income Tax Unit 3</a></li>
-            <li><a href="https://drive.google.com/file/d/1Nhf6bwAOYP8-nGrFB6dmN6jDNMjt2Bgl/view?usp=sharing" target="_blank">ESBM Unit 1 & 2</a></li>
-            <li><a href="https://drive.google.com/file/d/10ssHp2VR-iBbMWUtQEe80ijJMKFuoqH_/view?usp=sharing" target="_blank">Macro Economics Unit 1 & 2</a></li>
-            <li><a href="https://drive.google.com/file/d/1nv17jqcSY7sspnoWlsNmj1HxAQmK7Zep/view?usp=sharing" target="_blank">Marketing Management Unit 1 & 2</a></li>
-            <li><a href="https://drive.google.com/file/d/1rX-EBDYo6y8R8KCwNSJgm0BUUFGYpE1E/view?usp=sharing" target="_blank">Banking Unit 1</a></li>
-        </ul>
-    </div>
-
-    <div class="pdf-section">
-        <h2>📝 Important Questions with Answers (S.Y. B.Com)</h2>
-        <ul>
-            <li><a href="https://drive.google.com/file/d/1oDFylDhqfYZDiC_FmTO_c5scLbamnvN8/view?usp=sharing" target="_blank">Macro Economics Q&A</a></li>
-            <li><a href="https://drive.google.com/file/d/1JcXelBQSBOFiWyVicQBt263PkaTLUGfl/view?usp=sharing" target="_blank">Cost Accounting Q&A</a></li>
-            <li><a href="https://drive.google.com/file/d/1IaltyGV5uWpw0s-Clv2czxzKv15uAHka/view?usp=sharing" target="_blank">ESBM Q&A</a></li>
-            <li><a href="https://drive.google.com/file/d/1LOpIe8_GnbQuQNR2YTgd4KFwDIGp9T9q/view?usp=drive_link" target="_blank">Money & Banking</a></li>
-        </ul>
-    </div>
-    
-    <div class="pdf-section">
-        <h2>📝 MCQ PDFs with Answers (S.Y. B.Com)</h2>
-        <ul>
-            <li><a href="https://drive.google.com/file/d/1YxJJUByaqDvWcZA6lLc4kKhaPe3pfEJJ/view?usp=sharing" target="_blank">Marketing Management MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1_kBVuwQVcdXftYeBTgzQYxZgxNDXj3fs/view?usp=sharing" target="_blank">Income Tax Return MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1gYx-3b54kYy4-BT2GsKHb8uZ-sMvVVjX/view?usp=sharing" target="_blank">Computerized Accounting MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1CaOKkJ-Oj1EKnuMQYFIAmQsPKGupDV9a/view?usp=sharing" target="_blank">Critical Thinking MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1rkE4e39jXZ9LDf6sgjD_ne7CT1juBkaD/view?usp=sharing" target="_blank">Critical Thinking Unit 2 MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1Rv6X2sOZHS6KZ24hprM_r93JB0Ni330X/view?usp=sharing" target="_blank">Innovation in Rural Entrepreneurship MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1yy2EAtDpPjieVWVfyechJXhBbejAxRj_/view?usp=sharing" target="_blank">Banking Literacy MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1TlMb9WgjQUPUJ7HiLOqHM-Y9lcPSrESe/view?usp=sharing" target="_blank">English for Digital & Virtual Communication MCQs</a></li>
-            <li><a href="https://drive.google.com/file/d/1hmOLBkFO92HANvcRs4gar4lXqxRW_9Ws/view?usp=drive_link" target="_blank">Economics for Competitive Exam MCQs</a></li>
-        </ul>
-    </div>
-
+    <!-- Back to Home Button -->
     <a href="index.html" class="btn">⬅️ Back to Home</a>
+
+    <h1 class="page-title">📚 Study Material (S.Y. B.Com)</h1>
+
+    <div class="pdf-container">
+        <!-- Accounting Section -->
+        <div class="pdf-box">
+            <h2>📘 Accounting</h2>
+            <a href="https://drive.google.com/file/d/174DbXuLqjv4T6qN_02L4x_8Yidq3Ip6v/view?usp=drive_link" target="_blank" class="pdf-link">Cost Accounts - Unit 1, Ch 1</a>
+            <a href="https://drive.google.com/file/d/1CKchbkqdC9QX6uHqCLvbAZp4yftj_Fh4/view?usp=sharing" target="_blank" class="pdf-link">Cost Accounts - Unit 1, Ch 2</a>
+            <a href="https://drive.google.com/file/d/1KYE7xMPElLSV8c8HMrnqzh5JZrrLKeQB/view?usp=sharing" target="_blank" class="pdf-link">Cost Accounting - Unit 2 (labour cost)</a>
+            <a href="https://drive.google.com/file/d/11e40Kew_fkGX14muqv7MHoyuqRBX4yoi/view?usp=sharing" target="_blank" class="pdf-link">Cost Accounting - Unit 2 (overheads)</a>
+        </div>
+
+        <!-- Economics Section -->
+        <div class="pdf-box">
+            <h2>📗 Economics</h2>
+            <a href="pdfs/study material/macro economics unit 1.pdf" target="_blank" class="pdf-link">Macroeconomics - Unit 1</a>
+        </div>
+
+        <!-- ESBM Section -->
+        <div class="pdf-box">
+            <h2>📕 ESBM</h2>
+            <a href="pdfs/study material/EBSM 1.pdf" target="_blank" class="pdf-link">ESBM - Unit 1 & 2</a>
+        </div>
+
+        <!-- INCOME TAX Section -->
+        <div class="pdf-box">
+            <h2>📙 INCOME TAX</h2>
+            <a href="https://drive.google.com/file/d/1zR-mEso5giWOEtUFaVqjMEwnuc9q0oZE/view?usp=sharing" target="_blank" class="pdf-link">Income Tax Unit 3</a>
+        </div>
+
+        <!-- Marketing Management Section -->
+        <div class="pdf-box">
+            <h2>📘 Marketing Management</h2>
+            <a href="pdfs/study material/marketin management unit 1 (2).pdf" target="_blank" class="pdf-link">Marketing Management - Unit 1 & 2</a>
+        </div>
+
+        <!-- Banking Section -->
+        <div class="pdf-box">
+            <h2>📗 Banking</h2>
+            <a href="https://drive.google.com/file/d/1rX-EBDYo6y8R8KCwNSJgm0BUUFGYpE1E/view?usp=sharing" target="_blank" class="pdf-link">Banking - Unit 1</a>
+        </div>
+
+        <!-- MCQ Section -->
+        <div class="pdf-box">
+            <h2>📝 MCQs</h2>
+            <a href="https://docs.google.com/document/d/1EXAMPLE7" target="_blank" class="pdf-link">MCQs will come soon here</a>
+        </div>
+    </div>
 
 </body>
 </html>
