--- a/index.html
+++ b/index.html
@@ -3,74 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MentorsPoint - Learn & Grow</title>
-
+    <title>MentorsPoint - Learn Smarter</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
-        <div class="logo-container">
-            <img src="assets/logo.jpg" alt="MentorsPoint Logo" class="logo">
-            <h1>MentorsPoint</h1>
-        </div>
-        
-        <!-- Login & Sign-Up Buttons -->
-        <div class="auth-buttons">
-            <a href="login.html" class="btn">Login</a>
-            <a href="signup.html" class="btn signup-btn">Sign Up</a>
-        </div>
-    </header>
-    
+    <div id="navbar-container"></div>
 
-    <main>
-        <section class="hero">
-            <h2>Empowering Students with Knowledge</h2>
-            <p>Access high-quality study materials, practice MCQs, and learn with ease.</p>
-        </section>
+<script>
+    fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+        document.getElementById('navbar-container').innerHTML = data;
+    });
+</script>
 
-        <section class="buttons">
-            <a href="video.html" class="card" id="videoBtn">
-                <h3>🎥 Video Library</h3>
-                <p>Videos lectures coming soon here.</p>
-            </a>
+    <section class="hero">
+    <div class="hero-content">
+        <h1>Unlock Your Potential</h1>
+        <p>Learn smarter with Quality video lectures, study materials, and MCQs.</p>
+        <a href="login.html" class="btn">Get Started</a>
+    </div>
+    <div class="hero-image">
+        <img src="https://miro.medium.com/v2/resize:fit:1080/format:webp/1*vBi4Ycgdn5t3lu2SvQXuog.gif" alt="PROGRESING">
+    </div>
+</section>
 
-            <a href="pdf.html" class="card" id="pdfBtn">
-                <h3>📚 PDFs & Notes</h3>
-                <p>Download study materials & IMP.</p>
-            </a>
 
-            <a href="mcq.html" class="card" id="mcqBtn">
-                <h3>📝 MCQ Practice</h3>
-                <p>MCQ Practise test with Answers.</p>
-            </a>
+    <section class="buttons">
+    <a href="video.html" class="card" id="videoBtn">
+        <h3>🎥 Video Library</h3>
+        <p>Videos lectures coming soon here.</p>
+    </a>
 
-            <a href="#" onclick="checkWhatsApp()" class="card" id="whatsappBtn">
-               <h3>💬 Join WhatsApp</h3>
-               <p>Connect with our learning channel.</p>
-            </a>
+    <a href="pdf.html" class="card" id="pdfBtn">
+        <h3>📚 PDFs & Notes</h3>
+        <p>Download study materials & IMP.</p>
+    </a>
 
-            <script>
-            function checkWhatsApp() {
-                let whatsappChannelLink = "https://whatsapp.com/channel/0029Vb50R3rHltY0fII7w20H";
-                window.open(whatsappChannelLink, "_blank");
-            }
-            </script>
+    <a href="mcq.html" class="card" id="mcqBtn">
+        <h3>📝 MCQ Practice</h3>
+        <p>MCQ Practise test with Answers.</p>
+    </a>
+</section>
 
-            <a href="https://studio.d-id.com/agents/share?id=agt_F8gG9CEb&utm_source=copy&key=WVhWMGFEQjhOamRqTlRobE9UUm1aRGRrTUdRellXTm1Oamc1WWpCbU9rY3hXbUprTmt0b2FEWjRkMnhtY1d0ZlkyaElSdz09" 
-               target="_blank" 
-               class="card" 
-               id="chatbotBtn">
-                <h3>🤖 Chatbot</h3>
-                <p>Get instant answers to your queries.</p>
-            </a>
-        </section>          
-    </main>
-
-    <footer>
-        <p>© 2025 MentorsPoint. All Rights Reserved.</p>
-    </footer>
+<footer>
+    <p>&copy; 2025 MentorsPoint. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
