--- a/video-player.html
+++ b/video-player.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+    <div id="navbar-container"></div>
+
+    <script>
+        fetch('navbar.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('navbar-container').innerHTML = data;
+        });
+    </script>
+
     <header>
         <h1>📽️ MentorsPoint Video Player</h1>
     </header>
