--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <header>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <div class="logo">MentorsPoint</div>
+    <a href="index.html" class="logo">MentorsPoint</a>
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
