--- a/pdf.html
+++ b/pdf.html
@@ -58,6 +58,7 @@
         <div class="pdf-box">
             <h2>📗 Banking</h2>
             <a href="https://drive.google.com/file/d/1rX-EBDYo6y8R8KCwNSJgm0BUUFGYpE1E/view?usp=sharing" target="_blank" class="pdf-link">Banking - Unit 1</a>
+            <a href="https://drive.google.com/file/d/1ONb0hADeRFgXeHYtAVcZe6iEsEiFe2Bd/view?usp=share_link" target="_blank" class="pdf-link">Banking - Unit 3</a>
         </div>
 
         <!-- MCQ Section -->
