--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
       <!-- Card 2 -->
       <div class="faculty-card">
-        <img src="assets\Images\Screenshot 2025-04-08 at 11.27.17ΓÇ»PM.jpg" alt="Faculty 1">
+        <img src="assets/Images/Screenshot 2025-04-08 at 11.27.17 PM.jpg" alt="Faculty 1">
         <h3>Meghraj Chauhan</h3>
         <h4>Tech-handler (Co-Founder)</h4>
         <p>"Bringing Technology to Life"</p>
