--- a/pdf.html
+++ b/pdf.html
@@ -37,24 +37,32 @@
         <div class="pdf-box">
             <h2>📗 Economics</h2>
             <a href="pdfs/study material/macro economics unit 1.pdf" target="_blank" class="pdf-link">Macroeconomics - Unit 1</a>
+            <a href="https://drive.google.com/file/d/1RmWPWSGW_I254ZNuOxcwm7Hm1GaSxKDg/view?usp=share_link" target="_blank" class="pdf-link">Macroeconomics - Unit 2</a>
+            <a href="https://drive.google.com/file/d/1ci25mHBtEE5SzJJflk5WKW31OFfolUaU/view?usp=share_link" target="_blank" class="pdf-link">Macroeconomics - Unit 3</a>
+            <a href="https://drive.google.com/file/d/1tva1wo9TGrO7CVJ422-hMC1uoa33qbKK/view?usp=share_link" target="_blank" class="pdf-link">Macroeconomics - Unit 4</a>
         </div>
 
         <!-- ESBM Section -->
         <div class="pdf-box">
             <h2>📕 ESBM</h2>
             <a href="pdfs/study material/EBSM 1.pdf" target="_blank" class="pdf-link">ESBM - Unit 1 & 2</a>
+            <a href="https://drive.google.com/file/d/1bWURnK7QgRk2SEDdM1hopgOAH87Ht9X6/view?usp=share_link" target="_blank" class="pdf-link">ESBM - Unit 3</a>
         </div>
 
         <!-- INCOME TAX Section -->
         <div class="pdf-box">
             <h2>📙 INCOME TAX</h2>
+            <a href="https://drive.google.com/file/d/1uzJNrMZtsWGn20BpXsXvsFkEE07gOuLg/view?usp=share_link" target="_blank" class="pdf-link">Income Tax Unit 2</a>
             <a href="https://drive.google.com/file/d/1zR-mEso5giWOEtUFaVqjMEwnuc9q0oZE/view?usp=sharing" target="_blank" class="pdf-link">Income Tax Unit 3</a>
+            <a href="https://drive.google.com/file/d/1rZoTDKyzHs7FJn1Ff6XNVw9KnDC-86LA/view?usp=share_link" target="_blank" class="pdf-link">Income Tax Unit 4</a>
         </div>
 
         <!-- Marketing Management Section -->
         <div class="pdf-box">
             <h2>📘 Marketing Management</h2>
             <a href="pdfs/study material/marketin management unit 1 (2).pdf" target="_blank" class="pdf-link">Marketing Management - Unit 1 & 2</a>
+            <a href="https://drive.google.com/file/d/145enQBBnnMhmZda4fTB5loVIzUIwB4O7/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management - Unit 3</a>
+            <a href="https://drive.google.com/file/d/145enQBBnnMhmZda4fTB5loVIzUIwB4O7/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management - Unit 4</a>
         </div>
 
         <!-- Banking Section -->
