--- a/index.html
+++ b/index.html
@@ -22,38 +22,42 @@
     });
 </script>
 
-    <section class="hero">
-    <div class="hero-content">
-        <h1>Unlock Your Potential</h1>
-        <p>Learn smarter with Quality video lectures, study materials, and MCQs.</p>
-        <a href="login.html" class="btn">Get Started</a>
-    </div>
-    <div class="hero-image">
-        <img src="https://miro.medium.com/v2/resize:fit:1080/format:webp/1*vBi4Ycgdn5t3lu2SvQXuog.gif" alt="PROGRESING">
-    </div>
+    <!-- Hero Section -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Unlock Your Potential</h1>
+    <p>Learn smarter with Quality video lectures, study materials, and MCQs.</p>
+    <!-- Updated Get Started button to scroll to #features -->
+    <a href="#features" class="btn">Get Started</a>
+  </div>
+  <div class="hero-image">
+    <img src="https://miro.medium.com/v2/resize:fit:1080/format:webp/1*vBi4Ycgdn5t3lu2SvQXuog.gif" alt="PROGRESING">
+  </div>
 </section>
 
-<div class="heading-wrapper">
-    <h2 class="center-heading">Feature List</h2>
-    <div class="underline"></div>
-  </div>  
+<!-- Feature List Section -->
+<div class="heading-wrapper" id="features">
+  <h2 class="center-heading">Feature List</h2>
+  <div class="underline"></div>
+</div>
 
-    <section class="buttons">
-    <a href="video.html" class="card" id="videoBtn">
-        <h3>🎥 Video Library</h3>
-        <p>Videos lectures coming soon here.</p>
-    </a>
+<section class="buttons">
+  <a href="video.html" class="card" id="videoBtn">
+    <h3>🎥 Video Library</h3>
+    <p>Videos lectures coming soon here.</p>
+  </a>
 
-    <a href="pdf.html" class="card" id="pdfBtn">
-        <h3>📚 PDFs & Notes</h3>
-        <p>Download study materials & IMP.</p>
-    </a>
+  <a href="pdf.html" class="card" id="pdfBtn">
+    <h3>📚 PDFs & Notes</h3>
+    <p>Download study materials & IMP.</p>
+  </a>
 
-    <a href="mcq.html" class="card" id="mcqBtn">
-        <h3>📝 MCQ Practice</h3>
-        <p>MCQ Practise test with Answers.</p>
-    </a>
+  <a href="mcq.html" class="card" id="mcqBtn">
+    <h3>📝 MCQ Practice</h3>
+    <p>MCQ Practise test with Answers.</p>
+  </a>
 </section>
+
 
 <section class="faculty-section">
     <h2 class="faculty-heading">OUR TEAM</h2>
@@ -66,24 +70,21 @@
       <div class="faculty-card">
         <img src="assets/Images/PHOTO-2025-04-09-00-19-12 2.jpg" alt="Faculty 2">
         <h3>Suvarnraj Ghatge</h3>
-        <h4>All Rounder (Founder)</h4>
-        <p>"Jack of All Trades, Ace of Execution"</p>
+        <h4>(Founder)</h4>
       </div>
   
       <!-- Card 2 -->
       <div class="faculty-card">
-        <img src="assets\Images\Screenshot 2025-04-08 at 11.27.17ΓÇ»PM.jpg" alt="Faculty 1">
+        <img src="assets/Images/Screenshot 2025-04-08 at 11.27.17 PM.jpg" alt="Faculty 1">
         <h3>Meghraj Chauhan</h3>
-        <h4>Tech-handler (Co-Founder)</h4>
-        <p>"Bringing Technology to Life"</p>
+        <h4>(Co-Founder)</h4>
       </div>
   
       <!-- Card 3 -->
       <div class="faculty-card">
         <img src="assets/Images/WhatsApp Image 2025-04-08 at 23.53.49.jpeg" alt="Faculty 3">
         <h3>Taksh Solanki</h3>
-        <h4>Marketing handler (Co-Founder)</h4>
-        <p>"The Voice of Our Vision"</p>
+        <h4>(Co-Founder)</h4>
       </div>
     </div>
   </section>
@@ -91,7 +92,7 @@
   <section class="courses-section" id="courses">
     <h2 class="courses-heading">OUR COURSES</h2>
     <div class="courses-container">
-      <a href="login.html" class="course-card">
+      <a href="#features" class="course-card">
         <h3>S.Y. BCom</h3>
         <p>Click to get started with our featured course!</p>
       </a>
