--- a/pdf.html
+++ b/pdf.html
@@ -18,6 +18,16 @@
         });
     </script>
 
+    <h1 class="page-title">🚨 IMPORTANT QUESTIONS 🚨</h1>
+
+    <div class="pdf-container">
+        <!-- IMPORTANT QUESTIONS WITH ANSWERS -->
+        <div class="pdf-box">
+            <h2>📚 IMPORTANT QUESTIONS WITH ANSWERS</h2>
+            <a href="https://drive.google.com/file/d/17NIBmFo91P4B4ZmOkMnNPUEG-QBCpBm1/view?usp=share_link" target="_blank" class="pdf-link">Cost Accounts</a>
+        </div>
+    </div>
+
     <h1 class="page-title">📚 Study Material (S.Y. B.Com)</h1>
 
     <div class="pdf-container">
@@ -47,6 +57,7 @@
             <h2>📕 ESBM</h2>
             <a href="pdfs/study material/EBSM 1.pdf" target="_blank" class="pdf-link">ESBM - Unit 1 & 2</a>
             <a href="https://drive.google.com/file/d/1bWURnK7QgRk2SEDdM1hopgOAH87Ht9X6/view?usp=share_link" target="_blank" class="pdf-link">ESBM - Unit 3</a>
+            <a href="https://drive.google.com/file/d/1_PsA0kP8VpKgNWwfk9giAtBV-7ozDygZ/view?usp=share_link" target="_blank" class="pdf-link">ESBM - Unit 4</a>
         </div>
 
         <!-- INCOME TAX Section -->
@@ -62,7 +73,7 @@
             <h2>📘 Marketing Management</h2>
             <a href="pdfs/study material/marketin management unit 1 (2).pdf" target="_blank" class="pdf-link">Marketing Management - Unit 1 & 2</a>
             <a href="https://drive.google.com/file/d/145enQBBnnMhmZda4fTB5loVIzUIwB4O7/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management - Unit 3</a>
-            <a href="https://drive.google.com/file/d/1rZoTDKyzHs7FJn1Ff6XNVw9KnDC-86LA/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management - Unit 4</a>
+            <a href="https://drive.google.com/file/d/145enQBBnnMhmZda4fTB5loVIzUIwB4O7/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management - Unit 4</a>
         </div>
 
         <!-- Banking Section -->
