--- a/pdf.html
+++ b/pdf.html
@@ -26,6 +26,7 @@
             <h2>📚 IMPORTANT QUESTIONS WITH ANSWERS</h2>
             <a href="https://drive.google.com/file/d/17NIBmFo91P4B4ZmOkMnNPUEG-QBCpBm1/view?usp=share_link" target="_blank" class="pdf-link">Cost Accounts</a>
             <a href="https://drive.google.com/file/d/1V88ryWROn-VB-BY65J35AeiyEdHRCS1z/view?usp=share_link" target="_blank" class="pdf-link">ESBM</a>
+            <a href="https://drive.google.com/file/d/1LzoErkrDO8uXNpNiOXld2m8p3y1AenVe/view?usp=share_link" target="_blank" class="pdf-link">Macro Economics</a>
         </div>
     </div>
 
