--- a/pdf.html
+++ b/pdf.html
@@ -28,6 +28,7 @@
             <a href="https://drive.google.com/file/d/1V88ryWROn-VB-BY65J35AeiyEdHRCS1z/view?usp=share_link" target="_blank" class="pdf-link">ESBM</a>
             <a href="https://drive.google.com/file/d/1LzoErkrDO8uXNpNiOXld2m8p3y1AenVe/view?usp=share_link" target="_blank" class="pdf-link">Macro Economics</a>
             <a href="https://drive.google.com/file/d/1JvOsQ5Lthe7oDjNdE-6Gzkr63i3AVIV-/view?usp=share_link" target="_blank" class="pdf-link">Money and Banking</a>
+            <a href="https://drive.google.com/file/d/16xSKokfrrB3xVafu9Vyror6TYC9iTZ_6/view?usp=share_link" target="_blank" class="pdf-link">Marketing Management</a>
         </div>
     </div>
 
