--- a/pdf.html
+++ b/pdf.html
@@ -69,7 +69,7 @@
             <h2>📙 INCOME TAX</h2>
             <a href="https://drive.google.com/file/d/1uzJNrMZtsWGn20BpXsXvsFkEE07gOuLg/view?usp=share_link" target="_blank" class="pdf-link">Income Tax Unit 2</a>
             <a href="https://drive.google.com/file/d/1zR-mEso5giWOEtUFaVqjMEwnuc9q0oZE/view?usp=sharing" target="_blank" class="pdf-link">Income Tax Unit 3</a>
-            <a href="https://drive.google.com/file/d/1rZoTDKyzHs7FJn1Ff6XNVw9KnDC-86LA/view?usp=share_link" target="_blank" class="pdf-link">Income Tax Unit 4</a>
+            <a href="" target="_blank" class="pdf-link">Income Tax Unit 4</a>
         </div>
 
         <!-- Marketing Management Section -->
